Fix OTP and continue category admin
