# backend/src/routes/index.js
@@ -6,6 +6,7 @@ const authen = require("./authen");
 const company = require("./company");
 const category = require("./category");
 const user = require("./user");
+const otp = require("./otp");
 const swagger = require("../../swagger-output.json");
 const router = express.Router();
 router.use("/api/v1/docs", swaggerUi.serve, swaggerUi.setup(swagger));
@@ -17,6 +18,7 @@ router.get("/api/v1/docs.json", (req, res) => {
 router.use("/api/v1/user", user);
 router.use("/api/v1/company", company);
 router.use("/api/v1/category", category);
+router.use("/api/v1/otp", otp);
 router.use("/api/v1", authen);
 
 module.exports = router;
